--- a/diamond-react-7.0.0/package.json
+++ b/diamond-react-7.0.0/package.json
@@ -11,6 +11,7 @@
         "@fullcalendar/timegrid": "^5.7.2",
         "@reduxjs/toolkit": "^1.9.5",
         "axios": "^0.19.0",
+        "bootstrap": "^5.3.1",
         "chart.js": "3.3.2",
         "primeflex": "3.1.2",
         "primeicons": "5.0.0",
@@ -18,6 +19,7 @@
         "prismjs": "1.9.0",
         "react": "^17.0.1",
         "react-app-polyfill": "^2.0.0",
+        "react-bootstrap": "^2.8.0",
         "react-dom": "^17.0.1",
         "react-redux": "^8.1.2",
         "react-router-dom": "^5.2.0",
